# Assignment_05

./: .dockerignore  .env.example  .gitignore  AGENTIC_ARCHITECTURE.md  CHROMEDRIVER_FIX.md  CHUNK_ID_IMPLEMENTATION_SUMMARY.md  CONTRIBUTION_ATTESTATION.txt  CROSS_PLATFORM_CHROMEDRIVER.md  EMOJI_LOG_QUICK_REFERENCE.md  ENTITY_EXTRACTION_IMPLEMENTATION.md  EVAL.md  FASTMCP_IMPLEMENTATION_SUMMARY.md  FASTMCP_README.md  FASTMCP_SETUP.md  FASTMCP_USAGE.md  HITL_CONFIGURATION_FIX.md  HITL_EXTRACTION_RESULT_FIX.md  HITL_FASTAPI_IMPLEMENTATION.md  HITL_QUICK_START.md  MASTER_AGENT_SUMMARY.md  MCP_CLIENT_GUIDE.md  MCP_SERVER_COMPLETE.md  MCP_SERVER_GUIDE.md  PAYLOAD_PERSISTENCE_FIX.md  QUICK_LOGIN_REFERENCE.md  README.md  TOOL_LOGGING_ARCHITECTURE.md  evaluate_rag_vs_structured.py  pyproject.toml  quick_test.py  requirements.txt  requirements.txt.tmp  restart_mcp_server.sh  run_all_companies.py  run_all_structured.py  steps.txt  test_fastmcp_quick.py  test_ground_truth_load.py  test_mcp_client.py  time_structured_extraction.py  (+1 more)
data/: company_pages.json  forbes_ai50_seed.json  manual_fallback.json  metadata.dvc  raw.dvc
docker/: .env.example  AIRFLOW_SETUP.md  CHANGES_SUMMARY.md  Dockerfile  INDEX.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  start.ps1  start.sh
docs/: 00_START_HERE.md  AGENTIC_ARCHITECTURE.md  AIRFLOW_DOCKER_SETUP.md  AIRFLOW_QUICK_START.md  CHANGES_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_UPDATE_SUMMARY.md  COMPLETION_CHECKLIST.md  DELIVERY_SUMMARY.md  DOCKER_STREAMLIT_SETUP.md  DOCUMENTATION_INDEX.md  EMOJI_LOGGING_GUIDE.md  (+42 more)
(+343 files in other folders)
